--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,96 @@
-selenium==4.15.2
+aniso8601==9.0.1
+attrs==24.2.0
 beautifulsoup4==4.12.2
+blinker==1.9.0
+build==1.2.2
+CacheControl==0.14.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+cleo==2.1.0
+click==8.1.8
+colorama==0.4.6
+crashtest==0.4.1
+distlib==0.3.8
+dulwich==0.21.7
+exceptiongroup==1.2.2
+fastjsonschema==2.20.0
+filelock==3.16.1
+flasgger==0.9.7.1
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-RESTful==0.3.10
+flask-swagger-ui==4.11.1
+fsspec==2024.9.0
+greenlet==3.1.1
+h11==0.14.0
+idna==3.10
+importlib_metadata==8.5.0
+installer==0.7.0
+itsdangerous==2.2.0
+jaraco.classes==3.4.0
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+keyring==24.3.1
+lxml==4.9.3
+MarkupSafe==2.1.5
+mistune==3.0.2
+more-itertools==10.5.0
+mpmath==1.3.0
+msgpack==1.1.0
+mysql-connector-python==9.1.0
+networkx==3.3
+numpy==1.26.4
+outcome==1.3.0.post0
+packaging==24.1
 pandas==2.1.3
+pexpect==4.9.0
+pillow==10.4.0
+pkginfo==1.11.1
+platformdirs==4.3.6
+poetry==1.8.3
+poetry-core==1.9.0
+poetry-plugin-export==1.8.0
+ptyprocess==0.7.0
+pycountry==24.6.1
+pycparser==2.22
+PyMySQL==1.1.1
+pyproject_hooks==1.1.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+pywin32-ctypes==0.2.3
+PyYAML==6.0.2
+RapidFuzz==3.10.0
+referencing==0.35.1
+requests==2.32.3
+requests-toolbelt==1.0.0
+rpds-py==0.22.3
+selenium==4.15.2
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==2.0.36
+sympy==1.13.3
+tomli==2.0.1
+tomlkit==0.13.2
+torch==2.4.1+cu118
+torchaudio==2.4.1+cu118
+torchvision==0.19.1+cu118
+trio==0.27.0
+trio-websocket==0.11.1
+trove-classifiers==2024.9.12
+typing_extensions==4.12.2
+tzdata==2024.2
+Unidecode==1.3.8
+urllib3==2.2.3
+virtualenv==20.26.5
 webdriver-manager==4.0.1
-lxml==4.9.3 
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+zipp==3.20.2
